# monorepo

./: .cursorrules  .eslintcache  .gitignore  .prettierignore  .tool-versions  README.md  bun.lockb  conftest.py  eslint.config.cjs  eslint.config.mjs  nx.json  package-lock.json  package.json  pyproject.toml  pytest.ini  ruff.toml  tsconfig.base.json  tsconfig.json  turbo.json
.github/workflows/: build_and_test.yaml  main.yaml
apps/api/: README.md  project.json  pyproject.toml
apps/api/src/: main.py
apps/e2e/: README.md  conftest.py  project.json  pyproject.toml
apps/e2e/tests/: test_k8s.py
apps/foundation/: Pulumi.yaml  __main__.py  project.json  pyproject.toml
apps/foundation/src/foundation/: __init__.py  _k8s.py
apps/platform/: README.md  main.py  project.json  pyproject.toml
apps/platform/src/: Pulumi.yaml  main.py
apps/service/: conftest.py  package.json  pyproject.toml
apps/service-a/: package.json  tsconfig.json
apps/service-a/src/: index.ts
apps/service-b/: package.json  pyproject.toml
apps/service-b/src/: endpoint.py
apps/service/src/: main.py
apps/service/tests/: test_service.py
apps/service/tests/fixtures/: service_fixtures.py
apps/web-app/: package.json
apps/web-app/src/app/: page.tsx
apps/web-app/tests/: app.test.ts
tests/fixtures/: workspace_fixtures.py
