#-------------------------------------------------------------------------------
# Project: monorepo
#-------------------------------------------------------------------------------

[project]

name = "monorepo"
version = "0.0.0"
requires-python = ">=3.12"

dependencies = [
    "k8s",
    "pulumi>=3.147.0,<4.0.0",
    "pulumi-command>=1.0.1",
]

#-------------------------------------------------------------------------------
# UV
#-------------------------------------------------------------------------------

[tool.uv.workspace]

members = [
    "packages/k8s",
]

[tool.uv.sources]
k8s = { workspace = true }
