#-------------------------------------------------------------------------------
# Project: monorepo
#-------------------------------------------------------------------------------

[project]

name = "monorepo"
version = "0.0.0"
requires-python = ">=3.12"

dependencies = [
    "k8s",
    "tools",
]

#-------------------------------------------------------------------------------
# UV
#-------------------------------------------------------------------------------

[tool.uv.workspace]

members = [
    "packages/platform/k8s",
    "packages/tools",
]

[tool.uv.sources]

k8s = { workspace = true }
tools = { workspace = true }

[dependency-groups]

dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-bdd>=8.1.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.2",
]
