#-------------------------------------------------------------------------------
# Project: api
#-------------------------------------------------------------------------------

[project]

name = "api"
version = "0.0.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]>=0.115.7",
]
