#-------------------------------------------------------------------------------
# Project: e2e
#-------------------------------------------------------------------------------

[project]

name = "e2e"
version = "0.0.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]>=0.115.7",
]

[dependency-groups]

dev = []
