#-------------------------------------------------------------------------------
# Project: e2e
#-------------------------------------------------------------------------------

[project]

name = "e2e"
version = "0.0.0"
requires-python = ">=3.12"

dependencies = [
    "k8s",
]

#-------------------------------------------------------------------------------
# UV
#-------------------------------------------------------------------------------

[tool.uv.sources]

k8s = { workspace = true }
