#-------------------------------------------------------------------------------
# Project: foundation
#-------------------------------------------------------------------------------

[project]

name = "foundation"
version = "0.0.0"
requires-python = ">=3.12"

dependencies = [
    "pulumi>=3.147.0,<4.0.0",
    "pulumi-command>=1.0.1",
]

#-------------------------------------------------------------------------------
# Build System
#-------------------------------------------------------------------------------

[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"
