#-------------------------------------------------------------------------------
# Project: platform
#-------------------------------------------------------------------------------

[project]

name = "platform"
version = "0.0.0"
requires-python = ">=3.12"

dependencies = [
    "pulumi>=3.147.0,<4.0.0",
    "pulumi-command>=1.0.1",
]
