#-------------------------------------------------------------------------------
# Project: platform
#-------------------------------------------------------------------------------

[project]

name = "platform"
version = "0.0.0"
requires-python = ">=3.12"

dependencies = [
    "pulumi>=3.147.0,<4.0.0",
    "k8s",
]

#-------------------------------------------------------------------------------
# UV
#-------------------------------------------------------------------------------

[tool.uv.sources]

k8s = { workspace = true }
